--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div class="section">
     <h2>🔗 GitHub Project</h2>
-    <p><a href="https://github.com/yourusername/amazon-connect-hemjyoti" target="_blank">
+    <p><a href="https://erhemjyotikalita.github.io/amazon-connect-hemjyoti/" target="_blank">
       View the full project on GitHub
     </a></p>
   </div>
